--- a/template/success.html
+++ b/template/success.html
@@ -1,10 +1,53 @@
 <html>
 <head>
+    <title>upload</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Sign Up Form</title>
+
+    <!-- Font Icon -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='fonts/material-icon/css/material-design-iconic-font.min.css')}}">
+
+    <!-- Main css -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
+</head>
 <title>success</title>
 </head>
 <body>
-<p>File uploaded successfully</p>
-<p>File Name: {{name}}</p>
-<p>Predicted genre: {{genre}}</p>
+
+    <div class="main">
+        <section class="sign-in">
+        <div class="container">
+            <div class="signin-content">
+              
+               
+                <div class="signin-form" >
+                    <h3> File uploaded successfully </h3>
+                    <p>File Name: {{name}}</p>  
+                    <br>
+                    <br>
+                    <mark style="font-weight: bold;"> Predicted genre: {{genre}} </mark> <br> <br>
+                    <a href="{{ url_for('index')}}" > <button class="w3-button w3-block w3-teal" >Return to Home</button> </a> <br>
+                    
+                    <a href="{{ url_for('show_entries')}}" > <button class="w3-button w3-block w3-teal" >Play </button> </a> <br>
+                   
+                   
+                    <audio controls>
+                        <source src="http://127.0.0.1:5000/{{ 1}}" type="audio/wav">
+                    </audio>
+
+                </div>
+                   
+                  
+            </div>
+        </div>
+    </section>
+        </div>
+
+<p></p>
+<p></p>
 </body>
 </html>
