fixed minor changes in UI

--- a/template/file_upload_form.html
+++ b/template/file_upload_form.html
@@ -23,15 +23,13 @@
               
                
                 <div class="signin-form" >
-                    <h3> Please only upload wav file only </h3> 
+                    <h3> Please upload a wav file only </h3> 
                     <br>
-                      <input type="file" name="file" /><br>
+                        <input type="file" name="file" /><br>
                         <input type = "submit" value="Upload">
-                    </div>
-                   
-                        
-                    </form>
-            </div>
+                </div>
+            </form>
+        </div>
         </div>
     </section>
         </div>
