changed bg image in success page

--- a/template/success.html
+++ b/template/success.html
@@ -393,7 +393,7 @@
             <section class="intro_section page_mainslider ds">
                 <div class="flexslider" data-dots="true" data-nav="te">
                     <ul class="slides">
-                        <li> 
+                        <li> <img src="static/images/gallery/11.jpg" alt="">
                             <div class="container">
                                 <div class="row">
                                     <div class="col-sm-12 text-center">
@@ -403,7 +403,7 @@
                                                     <h2> <span class="small">Hello! your SUCCESSFUL prediction is</span> {{genre}} </h2>
                                                 </div>
                                                 <div class="intro-layer" data-animation="fadeInUp">
-                                                    <p>Music only makes me stronger. Music speaks to the heart in ways words cannot express.</p>
+                                                    <p>Scroll down for further INFO</p>
                                                 </div>
                                             </div>
                                             <!-- eof .slide_description -->
@@ -429,7 +429,8 @@
                             <div class="with_frame_image"> <img src="static/images/{{genre}}.jpg" alt="" class="rounded"> </div>
                         </div>
                         <div class="col-md-6">
-                            <h2 class="section_header with_line">{{genre}}</h2>
+                            <h2 class="section_header with_line">GENRE: {{genre}}</h2>
+                            <h3>Some characteristics:</h3>
                             <p>chroma_stft: {{chroma_stft}}</p>
                             <p>Root_mean_square_error: {{Root_mean_square_error}}</p>
                             <p>Fetching_Spectral_Centroid: {{Fetching_Spectral_Centroid}}</p>
@@ -550,7 +551,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-12 text-center">
-                            <h2 class="section_header with_line">Latest Album</h2>
+                            <h2 class="section_header with_line">Uploads</h2>
                         </div>
                     </div>
                     <div class="row">
