--- a/template/success.html
+++ b/template/success.html
@@ -400,7 +400,7 @@
                                         <div class="slide_description_wrapper">
                                             <div class="slide_description">
                                                 <div class="intro-layer" data-animation="fadeInUp">
-                                                    <h2> <span class="small">Hello! your SUCCESSFUL prediction is</span> {{genre}} </h2>
+                                                    <h2 style="color: #f23030;"> <span class="small">Hello! your SUCCESSFUL prediction is</span> {{genre}} </h2>
                                                 </div>
                                                 <div class="intro-layer" data-animation="fadeInUp">
                                                     <p>Scroll down for further INFO</p>
