Added spotify redirect and back button

--- a/template/success.html
+++ b/template/success.html
@@ -390,9 +390,12 @@
                     </div>
                 </div>
             </header>  -->
+            
             <section class="intro_section page_mainslider ds">
+                
                 <div class="flexslider" data-dots="true" data-nav="te">
-                    <ul class="slides">
+                    <a href="{{ url_for('index')}}">Back</a>
+                    <ul class="slides">        
                         <li> <img src="static/images/gallery/11.jpg" alt="">
                             <div class="container">
                                 <div class="row">
@@ -547,7 +550,7 @@
                     </div>
                 </div>
             </section> -->
-            <section id="latest-album" class="ds ms page_latest_album parallax section_padding_top_150 section_padding_bottom_100 columns_margin_bottom_30 columns_padding_25">
+            <!-- <section id="latest-album" class="ds ms page_latest_album parallax section_padding_top_150 section_padding_bottom_100 columns_margin_bottom_30 columns_padding_25">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-12 text-center">
@@ -738,7 +741,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> -->
             <!-- <section id="contact" class="ds ms background_cover page_contact section_padding_top_150 section_padding_bottom_150">
                 <div class="container">
                     <div class="row">
