--- a/template/test.html
+++ b/template/test.html
@@ -88,14 +88,14 @@
                                 {% endif %}  -->
                                 {% if message %}  
 									<li><a href="{{url_for('upload')}}">Genre Prediction </a></li>	
-									<li><a href="https://josefina-find-your-music.herokuapp.com" target="_blank">Explore</a></li>		
+									<li><a href="https://josefina-find-your-music.herokuapp.com/users/profile/10" target="_blank">Explore</a></li>		
 									<li><a href="#">{{ message }}</a></li>
 									<li><a href="#contact">Contact</a></li>
 									<li><a href="{{ url_for('logout') }}">Logout</a></li>																
 								{% else %}
 									<li><a href="{{'register'}}">Register</a></li>
 									<li><a href="{{ url_for('index')}}">Login</a></li>
-									<li><a href="https://josefina-find-your-music.herokuapp.com" target="_blank">Explore</a></li>
+									<li><a href="https://josefina-find-your-music.herokuapp.com/users/profile/10" target="_blank">Explore</a></li>
                                 {% endif %}  							
                                 <li></li>
                                 <li></li>
@@ -282,7 +282,7 @@
 					<!-- social media links -->
 					<div class="social">
 						<a class="h-facebook" href="#"><i class="fa fa-facebook"></i></a>
-						<a class="h-google" href="#"><i class="fa fa-google-plus"></i></a>
+						<a class="h-google" href="#"><i class="fa fa-instagram"></i></a>
 						<a class="h-linkedin" href="#"><i class="fa fa-linkedin"></i></a>
 						<a class="h-twitter" href="#"><i class="fa fa-twitter"></i></a>
 					</div>
