--- a/template/play.html
+++ b/template/play.html
@@ -27,15 +27,15 @@
                 <div class="signin-form" >
                     <h3> File uploaded successfully </h3>
                       
-                   
-                  
-                    <p>File Name: {{entries.playid}}</p>
+                    <p>File Name: {{entries}}</p>
+
                     <audio controls>
                         <source src="http://127.0.0.1:5000/{{ entries.playid}}" type="audio/wav">
+                         
                   
                         </audio>
                     
-
+                        
                 </div>
                    
                   
