--- a/template/success.html
+++ b/template/success.html
@@ -36,7 +36,8 @@
                    
                    
                     <audio controls>
-                        <source src="http://127.0.0.1:5000/{{ 1}}" type="audio/wav">
+                        <p>{{play[1]}}</p>
+                        <source src="http://127.0.0.1:5000/{{play.1}}" type="audio/wav">
                     </audio>
 
                 </div>
